2006-06-25  Pawel Salek

	* libbalsa/mailbox_imap.c: use the synchronous STORE calls for now.
	* libbalsa/mailbox_local.c: set first_unread more reliably.
	* src/balsa-index.c: fix bug 345638.
	* NEWS: release 2.3.13.

2006-06-25 Albrecht Dreß <albrecht dot dress at arcor dot de>

	* src/: ab-window.c, ab-window.h: use a table to improve layout of
	address selection dialog.

2006-06-22  Pawel Salek

	* libbalsa/identity.c: fix a regression (patch from PB).
	* libbalsa/address-entry.c: remove non-printable characters on
	text paste (AD).

2006-06-17  Pawel Salek

	* Makefile.am: do not include GNOME_Balsa.server in the tarball.
	* balsa.spec.in: fedora builds do not require gmime.
	* configure.in: prepare for release.
	* libbalsa/identity.c: allow arbitrary sig file names so that
	arguments can be passed to executable sigs.

2006-06-16 08:17  PeterB

	* libbalsa/mailbox_imap.c: get mailbox lock before gdk lock.

2006-06-15 21:55  PeterB

	* libbalsa/mailbox_local.c: drop the gdk lock before returning.

2006-06-01 10:57  PeterB

	* libbalsa/mailbox_imap.c: free cache-manager.
	* src/balsa-mblist.c: append subtree when appending exposed
	unscanned node.

2006-05-31 09:43  PeterB

	* libbalsa/filter-file.c, libbalsa/filter-funcs.c,
	libbalsa/filter.c, libbalsa/filter.h, libbalsa/mailbox.c,
	libbalsa/mailbox_local.c, src/balsa-index.c,
	src/filter-edit-callbacks.c, src/filter-edit-dialog.c,
	src/main-window.c: ref-count LibBalsaCondition instead of cloning.
	* libbalsa/: mailbox_maildir.c, mailbox_mbox.c, mailbox_mh.c: free
	mailbox info after closing mailbox-local.

2006-05-30 00:22  PeterB

	* src/balsa-mime-widget-text.c: plug leak.

2006-05-29 15:56  PeterB

	* libbalsa/: mailbox.c, mailbox.h: implement
	LibBalsaMailbox::persistent_view_filter.
	* src/: balsa-index.c, main-window.c: make flag view-filter
	persistent, so we can restore it when closing a local mailbox.
	* libbalsa/mailbox_local.c: restore persistent view-filter before
	saving the tree when closing.
