@@ -298,6 +298,7 @@ lb_imap_server_info_new(LibBalsaServer *server)
     }
     imap_handle_set_tls_mode(handle, mode);
     imap_handle_set_option(handle, IMAP_OPT_ANONYMOUS, server->try_anonymous);
+    imap_handle_set_option(handle, IMAP_OPT_CLIENT_SORT, TRUE);
     return info;
 }
 
