@@ -83,8 +83,9 @@ typedef enum
 } ImapCapability;
 
 typedef enum {
-  IMAP_OPT_ANONYMOUS, /* try anonymous authentication */
-  IMAP_OPT_BINARY     /* enable binary=no-transfer-encoding msg transfer */
+  IMAP_OPT_ANONYMOUS,   /**< try anonymous authentication */
+  IMAP_OPT_CLIENT_SORT, /**< allow client-side sorting */
+  IMAP_OPT_BINARY       /**< enable binary=no-transfer-encoding msg transfer */
 }  ImapOption;
 
 typedef struct _ImapMboxHandleClass ImapMboxHandleClass;
